apps/picsou/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: picsou
  namespace: picsou
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`picsou.oisd.io`)
      kind: Rule
      services:
        - name: picsou
          port: 8080
      middlewares:
        - name: default-chain
          namespace: traefik
  tls:
    secretName: wildcard-tls-oisd
